Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects</h4>
 
 <ol>
-<li>Memes.</li>
+<li>Memes</li>
 <li>Pocketbook</li>
 <li>Threadly</li>
 <li>Forecast</li>
 <li>Portafolio page</li>
+<li>List Easy</li>
 </ol>
 
 <h2>
@@ -106,6 +107,13 @@ More logic can be added to clear out the errors when the fields are filled out, 
 <p>Added filtering to a portafolio page using .addClass() and .removeClass().</p>
 
 <p><img src="http://i.imgur.com/ywfZ8yi.png"></p>
+
+<h2>
+<a id="list-easy" class="anchor" href="#list-easy" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>List Easy</h2>
+
+<p>Add a new item, star items, and remove items.</p>
+
+<p><img src="http://i.imgur.com/YRDbAxC.png"></p>
       </section>
 
       <footer>
